--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
     <h1>Heading</h1>
     <img src="/assets/Europe.png">
+    <img src="/assets/Europe_flags.png">
     <p>asd</p>
 </body>
 </html>
