--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 <body>
     <h1>Heading</h1>
+    <h2>European Summer<h2>
     <img src="/assets/Europe.png">
     <img src="/assets/Europe_flags.png">
     <p>asd</p>
