Add test entry my name

--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
 </head>
 <body>
     <h1>Heading</h1>
+    <p>Test entry by Clayton</p
     <h2>European Summer<h2>
     <img src="/assets/Europe.png">
     <img src="/assets/Europe_flags.png">
     <p>asd</p>
+    <p>Test entry by Clayton</p>
 </body>
 </html>
